[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.1.0"
assert_fs = "1.1.1"

[package]
name = "grrs"
version = "0.1.0"
authors = ["João Mello <joaocarreira88@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/jcomello/grrs"
repository = "https://github.com/jcomello/grrs"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]
